another importer with a few more useful fields

--- a/app/assets/stylesheets/elections.sass
+++ b/app/assets/stylesheets/elections.sass
@@ -93,6 +93,14 @@ body
   flex-direction: column
   justify-content: flex-end
   align-items: stretch
+
+  &.-cta
+    select
+      font-size: var(--t3)
+      font-weight: 600
+      border-width: 2px
+      background-position: right 1.5rem center
+
   label
     display: none
   select
@@ -102,7 +110,7 @@ body
     font-weight: 400
     color: var(--default)
     line-height: 1.4
-    padding: .5em 1.5em .5em .75em
+    padding: .5em 2em .5em .75em
     width: 100%
     max-width: 100%
     box-sizing: border-box
