--- a/app/views/projects/election_surveys/show.html.haml
+++ b/app/views/projects/election_surveys/show.html.haml
@@ -15,25 +15,15 @@
                     :markdown
                       We asked our readers what they want candidates in the upcoming elections to discuss as they compete for votes, and then posed those questions to the candidates for the 2019 local elections. These are their responses.
 
-  .block.-py4
-    .wrapper.-container{role: 'layout'}
-      .wrapper.-large{role: 'layout'}
-        .block.-py4
-          %h3.h.-h2 Choose your local electoral area:
-        .row
-          .col-xs-12.col-md-9
-            - @areas.each do |area|
-              - candidates = @survey.candidates_for_area(area)
-              = link_to area_projects_election_survey_path(id: @survey.slug, area_id: area.slug), class: 'block -py2 -bt' do
-                .p.-t4
-                  .c.-w6= area.name
-                  %p #{ pluralize candidates.count, 'candidate' } competing for #{ pluralize area.seats, 'seat' }.
-
-          .col-xs-12.col-md-3
-            .block.-bg-faint.-p2
-              .p.-t4.-sf
-                :markdown
-
-                  You can read more about this project and how we're covering the <a href="https://www.dublininquirer.com/2019/02/27/what-issues-do-you-want-local-elections-candidates-to-talk-about" data-turbolinks="false">2019 local election</a>.
+          .row
+            .col-xs-12.col-md-5
+              .block.-mt4
+                .area-switcher.-cta
+                  %label select an electoral area
+                  %select{'data-behaviour': 'switchView', 'data-path': area_projects_election_survey_path(id: @survey.slug, area_id: '')}
+                    %option Choose your electoral area
+                    <option disabled>──────────</option>
+                    - @areas.each do |area|
+                      %option{value: area.slug}= area.name
 
   = render partial: 'projects/election_surveys/footer'
