--- a/app/views/projects/election_surveys/_footer.html.haml
+++ b/app/views/projects/election_surveys/_footer.html.haml
@@ -19,7 +19,7 @@
           .block.-p2.-bg-faint
             .p.-t4.-sf
               :markdown
-                **We’ve had loads of help** putting together this voter’s guide – it's really been a community effort. Some 200 of our readers told us what issues they'd like us to ask candidates about, 11 readers helped us by finding contact details for candidates in their areas and getting in touch and asking them to answer our questions.
+                **We’ve had loads of help** putting this together – it's really been a community effort. Some 200 of our readers told us what issues they'd like us to ask candidates about, 11 readers helped us by finding contact details for candidates in their areas and getting in touch and asking them to answer our questions.
 
                 So, a big thank-you – we couldn’t have done it without them. If you're interested in helping us with this kind of civic journalism projects in the future, please fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLScQaR88UbjXw3cQMwoq4rBF5BJ_xuSc9NzGsOdQqK50WQQoHw/viewform" data-turbolinks="false">this little form</a> so we know who you are and how to reach you.
 
