--- a/app/views/projects/election_surveys/area.html.haml
+++ b/app/views/projects/election_surveys/area.html.haml
@@ -51,7 +51,7 @@
                         %p.p.-t5.c.-w4= party.name
 
                 .body
-                  .block.-b.-bg-default.-p4
+                  .response-body
                     .p.-serif.-sf.-t3
                       :markdown
                         #{ response.body }
