--- a/app/views/projects/election_surveys/candidate.html.haml
+++ b/app/views/projects/election_surveys/candidate.html.haml
@@ -44,7 +44,7 @@
                       %p.p.-t5.c.-w4= @party.name
 
               .body
-                .block.-b.-bg-default.-p4.-mb2
+                .response-body
                   .p.-serif.-sf.-t3
                     :markdown
                       #{ response.body }
