add a page for nonresponsive candidates

--- a/app/assets/stylesheets/elections.sass
+++ b/app/assets/stylesheets/elections.sass
@@ -173,6 +173,9 @@ body
 .question
   position: relative
   padding-bottom: 8rem
+  @media screen and (min-width: $small)
+  @media screen and (min-width: $medium)
+    padding-bottom: 12rem
 
   &.-brief
     padding-bottom: 0
