--- a/app/views/projects/election_surveys/candidate.html.haml
+++ b/app/views/projects/election_surveys/candidate.html.haml
@@ -18,7 +18,7 @@
           .block.-p4.-b.-bg-default
             .p.-t3.-centered.-sf
               :markdown
-                #{ @candidate.name } hasn't yet responded to our _citizens' agenda_ questionnaire. If #{ @area.name } is your local electoral area, why not send them an email to remind them to submit their responses?
+                #{ @candidate.name } hasn't yet responded to our questionnaire. If #{ @area.name } is your local electoral area, why not send them an email to remind them to submit their responses?
 
             .block.-mt4
               .p.-t3.-centered
