--- a/app/views/projects/election_surveys/area.html.haml
+++ b/app/views/projects/election_surveys/area.html.haml
@@ -55,3 +55,5 @@
                     .p.-serif.-sf.-t3
                       :markdown
                         #{ response.body }
+
+          = render partial: 'projects/election_surveys/nonresponders', locals: {candidates: @nonresponders}
