--- a/app/views/projects/election_surveys/party.html.haml
+++ b/app/views/projects/election_surveys/party.html.haml
@@ -60,3 +60,5 @@
                     .p.-serif.-sf.-t3
                       :markdown
                         #{ response.body }
+
+          = render partial: 'projects/election_surveys/nonresponders', locals: {candidates: @nonresponders}
