add a little link from the home page

--- a/app/assets/stylesheets/elections.sass
+++ b/app/assets/stylesheets/elections.sass
@@ -230,9 +230,13 @@ body
   flex-direction: row
   justify-content: center
   align-items: flex-start
+  flex-wrap: wrap
+
+  &.-left
+    justify-content: flex-start
 
 .candidate-mini
-  margin: 0 1rem
+  margin: 0 1rem 2rem
   flex-basis: 8rem
   flex-grow: 0
   flex-shrink: 0
