--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -30,7 +30,11 @@
                     = render partial: 'articles/excerpts/half', locals: {article: article}
                     %hr.-stroke
 
-                - if @cover
+                - if (@current_issue.issue_date == Date.new(2019,5,1)) or Rails.env.development?
+                  .col-xs-12.col-md-6.flex
+                    = render partial: 'articles/excerpts/election'
+                
+                - elsif @cover
                   .col-xs-12.col-md-6
                     = render partial: 'articles/excerpts/cover', locals: {article: @cover}
 
