--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -34,7 +34,7 @@
                   .col-xs-12.col-md-6.flex
                     = render partial: 'articles/excerpts/election'
                 
-                - elsif @cover
+                - if @cover && @articles.count.even?
                   .col-xs-12.col-md-6
                     = render partial: 'articles/excerpts/cover', locals: {article: @cover}
 
