--- a/app/assets/stylesheets/components/_excerpt.sass
+++ b/app/assets/stylesheets/components/_excerpt.sass
@@ -5,3 +5,29 @@
     color: var(--black)
     .headline
       color: var(--blue)
+
+  &.-election
+    background-color: var(--blue)
+    color: var(--default)
+    padding: 2rem
+    margin-top: 2rem
+    margin-bottom: 2rem
+    position: relative
+    padding-right: calc(45% + 2rem)
+    display: flex
+    flex-direction: column
+    justify-content: space-between
+    align-items: stretch
+
+    figure
+      position: absolute
+      right: 0
+      top: 0
+      bottom: 0
+      left: 55%
+      padding: 0
+      margin: 0
+      img
+        width: 100%
+        height: 100%
+        object-fit: cover
