--- a/app/views/articles/excerpts/_election.html.haml
+++ b/app/views/articles/excerpts/_election.html.haml
@@ -5,9 +5,7 @@
 
     .p.-t4.-sf
       :markdown
-        We asked our readers what they want candidates in the upcoming elections to discuss as they compete for votes.
-
-        These are their responses.
+        We asked our readers what they want candidates in the upcoming elections to discuss as they compete for votes. See what the candidates have to say on those topics.
       
     %figure
       = image_tag "elections/image.jpg"
