more low-level controller caching for parsing survey data

--- a/app/views/layouts/elections.html.haml
+++ b/app/views/layouts/elections.html.haml
@@ -24,7 +24,7 @@
     <meta name="theme-color" content="#ff0000">
 
   %body.-project
-    %header.header.-elections{class: ((defined?(@blue) && @blue) ? '-blue' : nil)}
+    %header.header.-elections.-blue
       .logo
         = link_to root_path, 'data-turbolinks': false do
           .logotype.-small
