default to missing portraits

--- a/app/views/projects/election_surveys/_footer.html.haml
+++ b/app/views/projects/election_surveys/_footer.html.haml
@@ -14,7 +14,7 @@
                   - candidates.each do |candidate|
                     = link_to candidate_projects_election_survey_path(id: @survey.slug, candidate_id: candidate.slug), class: 'candidate-mini' do
                       .face
-                        .artwork.-portrait.-square= image_tag "candidates/#{ candidate.slug }.jpg"
+                        = render partial: 'projects/election_surveys/portrait', locals: {candidate: candidate}
                       .info
                         .p.-t5.c.-w6= candidate.name
 
