--- a/app/views/projects/election_surveys/party.html.haml
+++ b/app/views/projects/election_surveys/party.html.haml
@@ -48,7 +48,7 @@
                   .content
                     = link_to candidate_projects_election_survey_path(id: @survey.slug, candidate_id: candidate.slug) do
                       .block.-mb2
-                        .artwork.-portrait.-square= image_tag "candidates/#{ candidate.slug }.jpg"
+                        = render partial: 'projects/election_surveys/portrait', locals: {candidate: candidate}
                         .speech-line
                       .p.-centered
                         %p.p.-t4.c.-w6= candidate.name
