--- a/app/views/projects/election_surveys/candidate.html.haml
+++ b/app/views/projects/election_surveys/candidate.html.haml
@@ -24,7 +24,7 @@
               .block.-mt4
                 .p.-t3.-centered
                   = link_to "Email #{ @candidate.name }", "mailto:#{ @candidate.email_address }?cc=sam@dublininquirer.com&subject=dublin inquirer questionnaire&body=I am a voter in #{ @area.name } and I am interested in your responses to the questions on Dublin Inquirer's local election project.", class: 'button -standard'
-                  
+
   - else
     .block.-bg-faint.-pt4
       - @questions.each do |question|
@@ -53,7 +53,7 @@
                   .content
                     = link_to candidate_projects_election_survey_path(id: @survey.slug, candidate_id: @candidate.slug) do
                       .block.-mb2
-                        .artwork.-portrait.-square= image_tag "candidates/#{ @candidate.slug }.jpg"
+                        = render partial: 'projects/election_surveys/portrait', locals: {candidate: @candidate}
                         .speech-line
                       .p.-centered
                         %p.p.-t4.c.-w6= @candidate.name
