--- a/app/views/projects/election_surveys/show.html.haml
+++ b/app/views/projects/election_surveys/show.html.haml
@@ -1,3 +1,6 @@
+- set_meta_tags title: "Citizens' Agenda: 2019 local elections" 
+- set_meta_tags description: "Read what candidates in the 2019 local elections say they will do to address the issues our readers asked about"
+
 - cache [@survey,"show"] do
   .block.-bg-blue.-py4
     .wrapper.-container{role: 'layout'}
