--- a/app/views/projects/election_surveys/candidate.html.haml
+++ b/app/views/projects/election_surveys/candidate.html.haml
@@ -1,3 +1,6 @@
+- set_meta_tags title: @candidate.name
+- set_meta_tags description: "#{ @candidate.name }, #{ @party.name } candidate for #{ @area.name } in the 2019 local elections, on how they would address the issues our readers asked about"
+
 - cache [@survey, "candidate", @candidate.slug] do
   .block.-pt4.-pb2.-px2.-bg-blue
     .row
@@ -9,7 +12,7 @@
           #{ link_to @area.name, area_projects_election_survey_path(id: @survey.slug, area_id: @area.slug) }
 
       .col-xs-12.col-md-4
-
+        &nbsp;
   
   - if !@survey.has_responses_from?(@candidate)
     .block.-bg-faint.-py4
