external links for councillors

--- a/app/assets/stylesheets/elections.sass
+++ b/app/assets/stylesheets/elections.sass
@@ -110,6 +110,29 @@ body
       .response-body
         padding: 4rem
 
+.external-links
+  margin-top: 2rem
+  flex: 1
+  display: flex
+  flex-direction: column
+  justify-content: flex-end
+  align-items: stretch
+
+  a, a:link, a:visited
+    dispplay: block
+    font-size: var(--t4)
+    font-family: $sans
+    font-weight: 400
+    color: var(--default)
+    line-height: 1.4
+    padding: .5em 2em .5em .75em
+    border: 1px solid var(--white)
+    background-color: var(--blue)
+    background-position: right 1rem center
+    background-image: url(asset-path('external.svg'))
+    background-size: 2rem auto
+    background-repeat: no-repeat
+
 .area-switcher
   margin-top: 2rem
   flex: 1
