--- a/app/assets/stylesheets/shared/_basics.sass
+++ b/app/assets/stylesheets/shared/_basics.sass
@@ -38,6 +38,10 @@ a, a:link, a:visited
     &:hover
       cursor: default
       color: var(--grey)
+  
+code
+  font-family: $mono
+  background-color: var(--faint)
 
 h1, h2, h3, h4, h5, h6, big, strong, b
   font-weight: 600
