add an election ds template

--- a/app/views/projects/election_surveys/show.html.haml
+++ b/app/views/projects/election_surveys/show.html.haml
@@ -16,7 +16,7 @@
                 .block.-mt2
                   .p.-t3
                     :markdown
-                      We asked our readers what they want candidates in the upcoming elections to discuss as they compete for votes, and then posed those questions to the candidates for the 2019 local elections. These are their responses.
+                      We asked our readers what they want candidates in the 2019 local elections to discuss as they compete for votes, and then posed those questions to the candidates. These are their responses.
 
           .row
             .col-xs-12.col-md-5
