--- a/app/views/articles/templates/_airspace.html.haml
+++ b/app/views/articles/templates/_airspace.html.haml
@@ -9,4 +9,4 @@
     %figure.artwork.-featured
       = image_tag article.featured_artwork.image.large.url
       %figcaption= article.featured_artwork.caption
-  = raw render_content(article.content)
+  = raw render_content(article)
