--- a/app/views/articles/templates/_illustration.html.haml
+++ b/app/views/articles/templates/_illustration.html.haml
@@ -22,4 +22,4 @@
       = image_tag article.featured_artwork.image.large.url
       %figcaption= article.featured_artwork.caption
 
-  = raw render_content(article.content)
+  = raw render_content(article)
