--- a/app/views/articles/templates/_stack.html.haml
+++ b/app/views/articles/templates/_stack.html.haml
@@ -17,4 +17,4 @@
 
 .wrapper.-small{role: 'layout'}
   %article.article.-formatted.-standard.-stacked{lang: 'en'}
-    = raw render_content(article.content)
+    = raw render_content(article)
