--- a/app/views/articles/templates/_legacy.html.haml
+++ b/app/views/articles/templates/_legacy.html.haml
@@ -23,4 +23,4 @@
         %figcaption= article.featured_artwork.caption
 
     - if !@limited
-      = raw render_content(article.content)
+      = raw render_content(article)
