--- a/app/views/articles/templates/_standard.html.haml
+++ b/app/views/articles/templates/_standard.html.haml
@@ -22,4 +22,4 @@
       %figcaption= article.featured_artwork.caption
 
   - if !@limited
-    = raw render_content(article.content)
+    = raw render_content(article)
