--- a/app/views/layouts/_primary-footer.html.haml
+++ b/app/views/layouts/_primary-footer.html.haml
@@ -26,7 +26,7 @@
                 <br>
                 = link_to "Erin McGuire", "/contributors/erin-mcguire"
               %p
-                %big.c.-w4 Web & strategy
+                %big.c.-w4 Web
                 = link_to "Brian Flanagan", "/contributors/brian-flanagan"
 
         .col-xs-12.col-md-3
