--- a/app/views/home/imprint.html.haml
+++ b/app/views/home/imprint.html.haml
@@ -23,7 +23,7 @@
             %p #{ link_to reporter.full_name, reporter }
 
         .block.-my2
-          %h4.h.-h4 Web &amp; strategy
+          %h4.h.-h4 Web
           %p #{ link_to @staff[:cto].full_name, @staff[:cto] }
 
         .block.-my2
