--- a/app/views/home/show.html.haml
+++ b/app/views/home/show.html.haml
@@ -29,12 +29,8 @@
                   .col-xs-12.col-md-6.flex
                     = render partial: 'articles/excerpts/half', locals: {article: article}
                     %hr.-stroke
-
-                - if (@current_issue.issue_date <= Date.new(2019,5,29)) or Rails.env.development?
-                  .col-xs-12.col-md-6.flex
-                    = render partial: 'articles/excerpts/election'
                 
-                - if @cover && @articles.count.even?
+                - if @cover
                   .col-xs-12.col-md-6
                     = render partial: 'articles/excerpts/cover', locals: {article: @cover}
 
