--- a/app/views/migration/new.html.haml
+++ b/app/views/migration/new.html.haml
@@ -19,7 +19,7 @@
           .block.-mt2
             .p.-centered.-t5.c.-red.-sf
               :markdown
-                We were unable to find an account with that email address. If you're not sure what email address you signed up with, [get in touch](mailto:brian@dublininquirer.com) and we can help.
+                We were unable to find an account with that email address. If you're not sure what email address you signed up with, [get in touch](mailto:info@dublininquirer.com) and we can help.
 
   .block.-my4.-py4
     .p.-t4.-sf.-centered
