add new reporter to match print masthead

--- a/app/views/layouts/_primary-footer.html.haml
+++ b/app/views/layouts/_primary-footer.html.haml
@@ -31,6 +31,8 @@
                 = link_to "Sean Finnan", "/contributors/sean-finnan"
                 <br>
                 = link_to "Erin McGuire", "/contributors/erin-mcguire"
+                <br>
+                = link_to "Aura McMenamin", "/contributors/aura-mcmenamin"
 
         .col-xs-12.col-md-3
           .block.-mb4
