autolink crud for admin

--- a/app/views/admin/tags/_form.html.haml
+++ b/app/views/admin/tags/_form.html.haml
@@ -9,4 +9,9 @@
       = f.label :name
       = f.text_field :name
 
+    .field.-tick
+      = f.label :autolink do
+        Autolink?
+        = f.check_box :autolink
+
   .actions= f.submit 'Save', class: 'button'
