--- a/app/views/admin/tags/index.html.haml
+++ b/app/views/admin/tags/index.html.haml
@@ -31,5 +31,6 @@
     - @tags.each do |tag|
       %tr
         %td= link_to truncate(tag.name, length: 92), [:admin, tag]
+        %td{width: '150'}= tag.autolink? ? 'autolinked' : ''
         %td{width: '150'}= tag.displayable ? 'displayed' : 'hidden'
         %td{width: '150'}= pluralize tag.articles.count, 'article'
