--- a/app/views/users/payment.html.haml
+++ b/app/views/users/payment.html.haml
@@ -8,6 +8,12 @@
         :markdown
           We're having trouble charging your account. Please enter your credit or debit card details below to avoid an interruption in your subscription.
 
+  - elsif current_user.sources_count == 0
+    .block.-mb4
+      .p.-t3.-sf
+        :markdown
+          We don't have a payment card on file for your account. Please enter your credit or debit card details below to avoid an interruption in your subscription.
+
   = form_for @user, url: [:payment, :user], method: :put, html: {class: 'subscription-form', data: {'fonts-url': asset_url('fonts.css')}} do |f|
     .block.-form.-b.-p2.-bg-faint
       .field
