add comments section to admin

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -14,6 +14,7 @@
       %header.admin-header
         = link_to 'Dashboard', admin_root_path
         = link_to 'Users', admin_users_path
+        = link_to 'Comments', admin_comments_path
         .block.-px1.-my1
           .block.-bt
         = link_to 'Issues', admin_issues_path
